[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ise-exporter"
version = "2.0.0"
description = "Prometheus exporter for Cisco ISE"
requires-python = ">=3.10"
dependencies = [
    "prometheus-client>=0.20",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "oracledb>=3.4",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
ise-exporter = "ise_exporter.__main__:main"
ise-cli-backend = "ise_exporter.cli:main"

[tool.hatch.build]
exclude = [
    "/result",
    "/dist",
    "/deploy/test-monitoring/data",
]

[tool.hatch.build.targets.wheel]
packages = ["ise_exporter"]

[tool.ruff]
line-length = 100
